[gd_scene load_steps=2 format=3 uid="uid://dm614dfb13bo3"]

[ext_resource type="Script" uid="uid://t3e5fqlprtkk" path="res://Screens/PauseScreen.gd" id="1_e3ko5"]

[node name="PauseScreen" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3ko5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pausado" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -310.0
offset_right = 310.0
offset_bottom = 220.0
grow_horizontal = 2
theme_override_constants/margin_top = 15

[node name="RichTextLabel" type="RichTextLabel" parent="Pausado"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 150
text = "Pausado"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -155.5
offset_right = 145.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 60
text = "Resumir"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 60
text = "Reiniciar"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 60
text = "Sair"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
